# docker-starters

cpp/: CMakeLists.txt  Dockerfile  main.cpp  vcpkg.json
go/: .gitignore  Dockerfile  go.mod
python/: Dockerfile  app.py
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
swift/: Dockerfile  Package.resolved  Package.swift
swift/Sources/app/: main.swift
